# Banter_Server

./: .gitignore  pyproject.toml  requirements.txt  test_file.json
BNTRserver/: __init__.py  __main__.py  games.py  questionBuilder.py  teams.py  test_file.json
BNTRserver/testing/: find_event_id.json  get_scores.json  ingame_statistics.json  live_odds.json  locate_fixture_id.json  postgame_statistics.json  pregame_odds.json  test_file.json  track_game_time_1.json  track_game_time_2.json  track_game_time_3.json  track_game_time_4.json  track_game_time_5.json  track_game_time_6.json  track_game_time_7.json
testing/: get_scores_final.json  sportsbookOdds.json  track_game_time_1.json  track_game_time_2.json  track_game_time_3.json
